--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -15,50 +15,6 @@
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="3" column="4">
-     <layout class="QGridLayout" name="gridLayoutArrange">
-      <item row="1" column="0">
-       <widget class="QToolButton" name="upButton">
-        <property name="text">
-         <string>...</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="0">
-       <widget class="QToolButton" name="downButton">
-        <property name="text">
-         <string>...</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="0">
-       <spacer name="verticalSpacerUp">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>40</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item row="3" column="0">
-       <spacer name="verticalSpacerDown">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>40</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-     </layout>
-    </item>
     <item row="2" column="0">
      <spacer name="verticalSpacer">
       <property name="orientation">
@@ -74,53 +30,6 @@
        </size>
       </property>
      </spacer>
-    </item>
-    <item row="3" column="0" colspan="4">
-     <widget class="QTreeWidget" name="treeWidget">
-      <property name="sortingEnabled">
-       <bool>true</bool>
-      </property>
-      <column>
-       <property name="text">
-        <string>File Name</string>
-       </property>
-      </column>
-      <column>
-       <property name="text">
-        <string>Title Name</string>
-       </property>
-      </column>
-      <column>
-       <property name="text">
-        <string>Title ID</string>
-       </property>
-      </column>
-      <column>
-       <property name="text">
-        <string>Type</string>
-       </property>
-      </column>
-      <column>
-       <property name="text">
-        <string>Size</string>
-       </property>
-      </column>
-      <column>
-       <property name="text">
-        <string>Date Created</string>
-       </property>
-      </column>
-      <column>
-       <property name="text">
-        <string>Date Last Accessed</string>
-       </property>
-      </column>
-      <column>
-       <property name="text">
-        <string>Date Modified</string>
-       </property>
-      </column>
-     </widget>
     </item>
     <item row="0" column="0" colspan="5">
      <layout class="QGridLayout" name="gridLayoutCommand">
@@ -181,10 +90,64 @@
       </item>
      </layout>
     </item>
+    <item row="3" column="0" colspan="5">
+     <widget class="TreeWidget" name="treeWidget">
+      <property name="sortingEnabled">
+       <bool>true</bool>
+      </property>
+      <column>
+       <property name="text">
+        <string>File Name</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Title Name</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Title ID</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Type</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Size</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Date Created</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Date Last Accessed</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Date Modified</string>
+       </property>
+      </column>
+     </widget>
+    </item>
    </layout>
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
+ <customwidgets>
+  <customwidget>
+   <class>TreeWidget</class>
+   <extends>QTreeWidget</extends>
+   <header>treewidget.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
